remove useless line (old comment / not used import) add getSize() to PaginationPreset